--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 <script src = "createStones.js"       ></script>
 <script src = "initHooks.js"       ></script>
 <script src = "addSocialMedia.js"       ></script>
-<script src = "PosVelSimulation.js"></script>
+<!--<script src = "PosVelSimulation.js"></script>-->
+<script src = "PhysicsRenderer.js"></script>
 <script src = "ParticleUtils.js"></script>
 <script src = "initExplosion.js"></script>
 
@@ -65,6 +66,9 @@
   var container , camera, scene, renderer , stats;
 
   var clock;
+
+  // color that defines everything
+  var baseColor;
   
   var sceneSize = 10;
 
@@ -92,7 +96,7 @@
   var loader = new Loader();
 
   var audioController = new AudioController();
- // audioController.mute.gain.value = 0.0;
+  audioController.mute.gain.value = 0.0;
 
   
 
@@ -108,8 +112,9 @@
 
   shaders.load( 'fs-render'   , 'render'  , 'fragment'    );
   shaders.load( 'vs-render'   , 'render'  , 'vertex'      );
-
-
+      
+  
+  shaders.load( 'curlSim'   , 'curlSim' , 'simulation'  );
 
 
   particleTexture = THREE.ImageUtils.loadTexture( 'lib/flare.png' );
@@ -120,13 +125,13 @@
     loader.loadBarAdd();
   }
 
- // var userAudio = new UserAudio( audioController );
-  var stream = new Stream( 'magicStick.mp3' , audioController );
+  var userAudio = new UserAudio( audioController );
+  //var stream = new Stream( 'magicStick.mp3' , audioController );
 
-  //loader.addToLoadBar();
-  //userAudio.onStreamCreated = function(){
-  //  loader.loadBarAdd();
-  //}
+  loader.addToLoadBar();
+  userAudio.onStreamCreated = function(){
+    loader.loadBarAdd();
+  }
 
 
 
@@ -204,6 +209,7 @@
     var u = {
       uPos: { type:"v3" , value : dragonFish.leader.position },
       uVel: { type:"v3" , value : dragonFish.leader.velocity },
+      color: { type:"v3" , value : new THREE.Vector3( 1. , 0 , 0 ) },
       t_audio:{ type:"t" , value: audioController.texture },
       audioLookup:{ type:"f", value: .2},
       time:time
@@ -231,7 +237,7 @@
 
     var geo =  new THREE.CylinderGeometry( 1.45 , 0 , 1.6, 100 ,50,1 );
 
-     var body = new THREE.Mesh( 
+    var body = new THREE.Mesh( 
       geo,
       jellyMat
     );
@@ -469,9 +475,14 @@
 
     }
 
+    // Updates our explosion particles
     explosion.renderer.update();
      renderer.render( scene , camera );
      requestAnimationFrame( animate );
+
+
+    // Reseting values if we just got hit
+    explosion.renderer.simulationUniforms.justHit.value = 0.;
 
   }
 
@@ -518,6 +529,26 @@
   }
 
 
+  function changeColor( color ){
+
+
+    recreateLights( color.getHex() );
+
+    baseColor = color;
+
+    var vecColor = new THREE.Vector3( 
+      color.r,
+      color.g,
+      color.b
+    );
+
+
+    jellyMat.uniforms.color.value = vecColor;
+    console.log( explosion );
+    explosion.particles.material.uniforms.color.value = vecColor;
+
+
+  }
   function recreateLights( color ){
 
     for( var i = 0; i< lights.length; i++ ){
@@ -546,9 +577,9 @@
     var mainDir = baseDir.clone();
 
     var c = mainColor.clone();
-    c.r = c.r + ( (Math.random() -.5) )*.5;
-    c.g = c.g + ( (Math.random() -.5))*.5;
-    c.b = c.b + ( (Math.random() -.5) )*.5;
+    c.r = c.r + ( (Math.random() -.9) )*.5;
+    c.g = c.g + ( (Math.random() -.9))*.5;
+    c.b = c.b + ( (Math.random() -.9) )*.5;
 
     var d = mainDir.clone();
     d.x = d.x + ( (Math.random()-.5) * .5 );
@@ -573,7 +604,7 @@
   $("#startInfo").click( function(){
 
     
-    stream.play();
+    //stream.play();
 
     loader.liftCurtain();
     animate();
