adding in a bunch o new audio files to test mp3 loading time

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   var tmpMat;
   var jellyMat;
   var lights = [];
-  var mouse;
+  var mouse = { x:0 , y:0 };
   var counter = 0;
   var time = { type:"f" , value:0 }
   var intersectPlane;
