--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 <script src = "Level.js"              ></script>
 <script src = "Level1.js"              ></script>
 <script src = "Level2.js"              ></script>
+<script src = "Level3.js"              ></script>
+<script src = "Level4.js"              ></script>
 
 <script>  
 
@@ -215,12 +217,22 @@
     loader.addToLoadBar();
     LEVEL_1 = new Level( 'first level', dragonFish , LEVEL_1_PARAMS );
     LEVEL_2 = new Level( 'second level' ,dragonFish , LEVEL_2_PARAMS );
+    LEVEL_3 = new Level( 'third level' ,dragonFish , LEVEL_3_PARAMS );
+    LEVEL_4 = new Level( 'fourth level' ,dragonFish , LEVEL_4_PARAMS );
 
     LEVEL_1.nextLevel = LEVEL_2;
     LEVEL_2.oldLevel  = LEVEL_1;
 
+    LEVEL_2.nextLevel = LEVEL_3;
+    LEVEL_3.oldLevel  = LEVEL_2;
+
+    LEVEL_3.nextLevel = LEVEL_4;
+    LEVEL_4.oldLevel  = LEVEL_3;
+
     LEVELS.push( LEVEL_1 );
     LEVELS.push( LEVEL_2 );
+    LEVELS.push( LEVEL_3 );
+    LEVELS.push( LEVEL_4 );
     
     LEVEL_1.beginLoading();
     LEVEL_1.onPrepared = function(){
