trying to fix mouse problem

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   var tmpMat;
   var jellyMat;
   var lights = [];
-  var mouse = { x:0 , y:0 };
+  var mouse =  new THREE.Vector2();
   var counter = 0;
   var time = { type:"f" , value:0 }
   var intersectPlane;
